--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron">
+	<h1 class="display-3 text-center mb-5">Keeping Drawings Up To Date!</h1>
+	<p class="lead">&emsp; A drawing register is a controlled list of drawings that also provides a standardised way of 
+		tracking the addition of revisions and changes to an existing document. The list usually 
+		includes information such as drawing number, title, revision, author and date. This Drawing 
+		Register enables the easy identification of the latest revision of each drawing and 
+		captures key drawing information.
+	</p>
+	<hr class="my-4">
 </div>
