--- a/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
+++ b/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProjectStates" asp-action="Index">Project States</a>
+                        </li>
                     </ul>
                 </div>
             </div>
