--- a/DrawingRegisterWeb/Views/Projects/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Index.cshtml
@@ -19,6 +19,9 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
             <th>
@@ -38,6 +41,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                    @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreateDate)
