Completed Drawings Controller

--- a/DrawingRegisterWeb/Views/Drawings/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.File)
+                @Html.DisplayNameFor(model => model.File.Revision)
             </th>
             <th></th>
         </tr>
@@ -28,17 +28,17 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.DrawingNumber)
+                <a href="@item.File.FileUrl">
+                    @item.DrawingNumber
+                </a>
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Date)
+                @item.Date
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.File.FileUrl)
+                @item.File.Revision
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
