--- a/DrawingRegisterWeb/Views/ProjectItems/Create.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectItems/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrawingRegisterWeb.Models.Project
+﻿@model DrawingRegisterWeb.Models.ProjectItem
 
 @{
     ViewData["Title"] = "Create";
@@ -6,16 +6,16 @@
 
 <h1>Create</h1>
 
-<h4>Project</h4>
+<h4>ProjectItem</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ProjcetNubmer" class="control-label"></label>
-                <input asp-for="ProjcetNubmer" class="form-control" />
-                <span asp-validation-for="ProjcetNubmer" class="text-danger"></span>
+                <label asp-for="Number" class="control-label"></label>
+                <input asp-for="Number" class="form-control" />
+                <span asp-validation-for="Number" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -28,18 +28,8 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeadlineDate" class="control-label"></label>
-                <input asp-for="DeadlineDate" class="form-control" />
-                <span asp-validation-for="DeadlineDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProjectStateId" class="control-label"></label>
-                <select asp-for="ProjectStateId" class ="form-control" asp-items="ViewBag.ProjectStateId"></select>
+                <label asp-for="ProjectId" class="control-label"></label>
+                <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
