--- a/DrawingRegisterWeb/Views/ProjectItems/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectItems/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrawingRegisterWeb.Models.Project
+﻿@model DrawingRegisterWeb.Models.ProjectItem
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,14 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Project</h4>
+    <h4>ProjectItem</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProjcetNubmer)
+            @Html.DisplayNameFor(model => model.Number)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProjcetNubmer)
+            @Html.DisplayFor(model => model.Number)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -30,22 +30,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreateDate)
+            @Html.DisplayNameFor(model => model.Project)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DeadlineDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeadlineDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProjectState)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProjectState.Description)
+            @Html.DisplayFor(model => model.Project.Description)
         </dd>
     </dl>
     
