Changed all Models, Views and Database

--- a/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model DrawingRegisterWeb.Models.ProjectState
+﻿@model ProjectState
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Project State";
 }
 
 <h1>Create</h1>
 
-<h4>ProjectState</h4>
+<h4>Project State</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
