--- a/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model DrawingRegisterWeb.Models.ProjectState
+﻿@model ProjectState
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Project State";
 }
 
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProjectState</h4>
+    <h4>Project State</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
