--- a/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
@@ -19,18 +19,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" rows="3" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="btn-group mt-3" role="group">
+                <input type="submit" value="Create" class="btn btn-primary"/>
+                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
