--- a/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
@@ -1,33 +1,36 @@
 ﻿@model ProjectState
 
 @{
-    ViewData["Title"] = "Delete Project State";
+	ViewData["Title"] = "Delete Project State";
 }
 
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Project State</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+	<h4>Project State</h4>
+	<hr />
+	<dl class="row">
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Name)
+		</dt>
+		<dd class = "col-sm-10">
+			@Model.Name
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Description)
+		</dt>
+		<dd class = "col-sm-10">
+			@Model.Description
+		</dd>
+	</dl>
+
+	<form asp-action="Delete">
+		<input type="hidden" asp-for="Id"/>
+		<div class="btn-group" role="group">
+			<input type="submit" value="Delete" class="btn btn-danger" />
+			<a asp-action="Index" class="btn btn-secondary">Back to List</a>
+		</div>
+	</form>
+
 </div>
