--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -1,40 +1,64 @@
 ﻿@model IEnumerable<ProjectState>
 
 @{
-    ViewData["Title"] = "Project State";
+	ViewData["Title"] = "Project State";
 }
 
 <h1>Project State</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Name)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Description)
+			</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @item.Name
-            </td>
-            <td>
-                @item.Description
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+		<tr>
+			<td>
+				@item.Name
+			</td>
+			<td>
+				@item.Description
+			</td>
+			<td>
+					@if (item.Name == "Defined" ||
+							item.Name == "Running" ||
+							item.Name == "Suspended" ||
+							item.Name == "Canceled" ||
+							item.Name == "Completed")
+					{
+						<div class="btn-group" role="group">
+						<a 
+							asp-action="Edit" 
+							asp-route-id="@item.Id" 
+							style="pointer-events: none;"
+							class="btn btn-primary disabled">Edit</a>
+						<a 
+							asp-action="Delete" 
+							asp-route-id="@item.Id" 
+							style="pointer-events: none;"
+							class="btn btn-warning disabled">Delete</a>
+						</div>
+					}
+					else
+					{
+						<div class="btn-group" role="group">
+						<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+						<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-warning">Delete</a>
+						</div>
+					}
+			</td>
+		</tr>
 }
-    </tbody>
+	</tbody>
 </table>
