--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -6,10 +6,19 @@
 
 <h1>Project State</h1>
 
+<div class="alert alert-dismissible alert-warning">
+  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+  <h4 class="alert-heading">Warning!</h4>
+  <p class="mb-0">
+	  Custom project states have no built-in functions such as: Limiting the project view to team members
+	  , temporarily removing projects from the list and so on...</p>
+</div>
+
 <p>
-	<a asp-action="Create" class="btn btn-primary">Create New</a>
+	<a asp-action="Create" class="btn btn-primary">Create New Custom State</a>
 </p>
-<table class="table">
+
+<table class="table table-hover">
 	<thead>
 		<tr>
 			<th>
