--- a/DrawingRegisterWeb/Views/Projects/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Index.cshtml
@@ -1,49 +1,51 @@
-﻿@model IEnumerable<Project>
+﻿@model DrawingRegisterWeb.ViewModels.ProjectVM
 
 @{
 	ViewData["Title"] = "Projects";
 }
 
-<h1>Projects</h1>
+<h1 class="mb-3">Projects</h1>
 
 <p>
-	<a asp-action="Create" class="btn btn-primary">Create New</a>
+	<a asp-action="Create" class="btn btn-primary mb-3">Create New</a>
 </p>
-<table class="table">
+
+<form asp-controller="Projects" asp-action="Index" method="get" class="d-flex">
+		<select asp-for="States" asp-items="Model.ProjectStates" class="form-select me-sm-2">
+			<option value="">All</option>
+		</select>
+
+		<input asp-for="Search" type="text" class="form-control me-sm-2" placeholder="Search">
+		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+</form>
+
+<table class="table table-striped mt-3">
 	<thead>
 		<tr>
 			<th>
-				@Html.DisplayNameFor(model => model.ProjectNubmer)
+				@Html.DisplayNameFor(model => model.Projects![0].ProjectNubmer), @Html.DisplayNameFor(model => model.Projects![0].Name)
+			</th>
+			<th></th>
+			<th>
+				@Html.DisplayNameFor(model => model.Projects![0].CreateDate)
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.Name)
+				@Html.DisplayNameFor(model => model.Projects![0].DeadlineDate)
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.Description)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.CreateDate)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.DeadlineDate)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.ProjectState)
+				@Html.DisplayNameFor(model => model.Projects![0].ProjectState)
 			</th>
 			<th></th>
 		</tr>
 	</thead>
 	<tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Projects!) {
 		<tr>
 			<td>
-				@item.ProjectNubmer
+				@item.ProjectNubmer @item.Name
 			</td>
 			<td>
-				@item.Name
-			</td>
-			<td>
-				@item.Description
+				<a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Preview</a>
 			</td>
 			<td>
 				@item.CreateDate.ToShortDateString()
@@ -52,11 +54,7 @@
 				@item.DeadlineDate.ToShortDateString()
 			</td>
 			<td>
-					@if (item.ProjectState == null)
-					{
-						continue;
-					}
-				@item.ProjectState.Name
+				@item.ProjectState?.Name
 			</td>
 			<td>
 				<div class="btn-group" role="group">
