Updated all controllers, added Documentation, Drawing, Layouts Controllers, MV and Index Views

--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -10,8 +10,11 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <h4 class="alert-heading">Warning!</h4>
   <p class="mb-0">
-	  Custom project states have no built-in functions such as: Limiting the project view to team members
-	  , temporarily removing projects from the list and so on...</p>
+	  Custom project states have no built-in functions such as limiting accessibility to team members. 
+	  Custom project state will have the same functionality as a running project state. In all project 
+	  statuses, the administrator will always have complete access to create, read, update and delete 
+	  functions.
+  </p>
 </div>
 
 <p>
