--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-	<h1 class="display-3 text-center mb-5">Keeping Drawings Up To Date!</h1>
-	<p class="lead">&emsp; A drawing register is a controlled list of drawings that also provides a standardised way of 
+	<h1 class="display-3 text-center mb-5 text-primary">Keeping Drawings Up To Date!</h1>
+	<p class="lead text-secondary">&emsp; A drawing register is a controlled list of drawings that also provides a standardised way of 
 		tracking the addition of revisions and changes to an existing document. The list usually includes information 
 		such as drawing number, revision and date. This Drawing Register enables the easy identification of the latest 
 		revision of each drawing and captures key drawing information.
