--- a/DrawingRegisterWeb/Views/Projects/Details.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrawingRegisterWeb.ViewModels.Project_ProjectItemVM
+﻿@model DrawingRegisterWeb.ViewModels.ProjectVM
 
 @{
     ViewData["Title"] = "Project Details";
@@ -48,53 +48,58 @@
         </dd>
     </dl>
 </div>
-<div class="mt-3 mb-3">
+<div class="btn-group" role="group">
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Project!.Id" class="btn btn-primary">Edit</a>
+    <a asp-action="Delete" asp-route-id="@Model.Project!.Id" class="btn btn-danger">Delete</a>
 </div>
 <hr />
 
 <ul class="nav nav-tabs" role="tablist">
   <li class="nav-item" role="presentation">
-    <a class="nav-link active" data-bs-toggle="tab" href="#projectItems" aria-selected="true" role="tab">Project Items</a>
+    <a class="nav-link active" data-bs-toggle="tab" href="#drawings" aria-selected="true" role="tab">Drawings</a>
   </li>
   <li class="nav-item" role="presentation">
-    <a class="nav-link" data-bs-toggle="tab" href="#documentation" aria-selected="false" role="tab" tabindex="-1">Documentation</a>
+    <a class="nav-link" data-bs-toggle="tab" href="#documentations" aria-selected="false" role="tab" tabindex="-1">Documentations</a>
   </li>
   <li class="nav-item" role="presentation">
-    <a class="nav-link" data-bs-toggle="tab" href="#layout" aria-selected="false" role="tab" tabindex="-1">Layout</a>
+    <a class="nav-link" data-bs-toggle="tab" href="#layouts" aria-selected="false" role="tab" tabindex="-1">Layouts</a>
   </li>
 </ul>
 
 <div id="myTabContent" class="tab-content">
 
-  <div class="tab-pane fade active show" id="projectItems" role="tabpanel">
+  <div class="tab-pane fade active show" id="drawings" role="tabpanel">
     <table class="table table-striped mt-3">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.ProjectItems![0].Number)
+                    @Html.DisplayNameFor(model => model.Drawings![0].DrawingNumber)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ProjectItems![0].Name)
+                    @Html.DisplayNameFor(model => model.Drawings![0].Name)
+                </th>
+                <th>
+                        @Html.DisplayNameFor(model => model.Drawings![0].Description)
                 </th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-                @foreach (var item in Model.ProjectItems!)
+                @foreach (var item in Model.Drawings!)
                 {
                 <tr>
                     <td>
-                        @item.Number
+                        @item.DrawingNumber
                     </td>
                     <td>
                         @item.Name
                     </td>
                     <td>
-                        <div class="btn-group" role="group">
-                            <a asp-action="Edit" asp-route-id="" class="btn btn-primary">Edit</a>
-                            <a asp-action="Delete" asp-route-id="" class="btn btn-warning">Delete</a>
-                        </div>
+                        @item.Description
+                    </td>
+                    <td>
+                        <a asp-controller="Drawings" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Preview</a>
                     </td>
                 </tr>
                 }
@@ -102,12 +107,92 @@
     </table>
   </div>
 
-  <div class="tab-pane fade" id="documentation" role="tabpanel">
-    <p>List of Documents</p>
+  <div class="tab-pane fade" id="documentations" role="tabpanel">
+    <table class="table table-striped mt-3">
+        <thead>
+            <tr>
+                <th>
+                        @Html.DisplayNameFor(model => model.Documentations![0].FileName)
+                </th>
+                <th>
+                        @Html.DisplayNameFor(model => model.Documentations![0].FileType)
+                </th>
+                <th>
+                        @Html.DisplayNameFor(model => model.Documentations![0].Revision)
+                </th>
+                <th>
+                        @Html.DisplayNameFor(model => model.Documentations![0].CreateDate)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+                @foreach (var item in Model.Documentations!)
+                {
+                    <tr>
+                        <td>
+                            @item.FileName
+                        </td>
+                        <td>
+                            @item.FileType
+                        </td>
+                        <td>
+                            @item.Revision
+                        </td>
+                        <td>
+                            @item.CreateDate
+                        </td>
+                        <td>
+                            <a asp-controller="Documentations" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Preview</a>
+                        </td>
+                    </tr>
+                }
+        </tbody>
+    </table>
   </div>
 
-  <div class="tab-pane fade" id="layout" role="tabpanel">
-    <p>List of Layouts</p>
+  <div class="tab-pane fade" id="layouts" role="tabpanel">
+    <table class="table table-striped mt-3">
+        <thead>
+            <tr>
+                <th>
+                        @Html.DisplayNameFor(model => model.Layouts![0].FileName)
+                </th>
+                <th>
+                        @Html.DisplayNameFor(model => model.Layouts![0].FileType)
+                </th>
+                <th>
+                        @Html.DisplayNameFor(model => model.Layouts![0].Revision)
+                </th>
+                <th>
+                        @Html.DisplayNameFor(model => model.Layouts![0].CreateDate)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+                @foreach (var item in Model.Layouts!)
+                {
+                        <tr>
+                            <td>
+                            @item.FileName
+                            </td>
+                            <td>
+                            @item.FileType
+                            </td>
+                            <td>
+                            @item.Revision
+                            </td>
+                            <td>
+                            @item.CreateDate
+                            </td>
+                            <td>
+                                <a asp-controller="Layouts" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Preview</a>
+                            </td>
+                        </tr>
+                }
+        </tbody>
+    </table>
   </div>
 
 </div>
