Update DrawingsController, ProjectSatesController, SeedData model. Update and create most of Views for ProjectStates, Drawings, Projects

--- a/DrawingRegisterWeb/Views/Documentations/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Documentations/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="alert alert-dismissible alert-info mt-3">
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-  The best practice is to create new Documentation directly from the <a  asp-controller="Projects" asp-action="Index">Project</a>. 
+  The best practice is to create or upload new Documentation directly from the <a  asp-controller="Projects" asp-action="Index">Project</a>. 
   This way ensures that the project and the documentation are always connected.
 </div>
 
