--- a/DrawingRegisterWeb/Views/Layouts/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Layouts/Index.cshtml
@@ -8,8 +8,8 @@
 
 <div class="alert alert-dismissible alert-info mt-3">
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-  The best practice is to create new Documentation directly from the <a  asp-controller="Projects" asp-action="Index">Project</a>. 
-  This way ensures that the project and the documentation are always connected.
+  The best practice is to create or upload new Layout directly from the <a  asp-controller="Projects" asp-action="Index">Project</a>. 
+  This way ensures that the project and the layout are always connected.
 </div>
 
 <form asp-controller="Layouts" asp-action="Index" method="get" class="d-flex mt-3">
