--- a/DrawingRegisterWeb/Views/Drawings/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrawingRegisterWeb.Models.Project
+﻿@model DrawingRegisterWeb.Models.Drawing
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,15 +6,15 @@
 
 <h1 class="text-danger">Delete</h1>
 
-<h3>Are you sure you want to delete this Project?</h3>
+<h3>Are you sure you want to delete this Drawing?</h3>
 <div>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProjectNubmer)
+            @Html.DisplayNameFor(model => model.DrawingNumber)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProjectNubmer)
+            @Html.DisplayFor(model => model.DrawingNumber)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -35,19 +35,13 @@
             @Html.DisplayFor(model => model.CreateDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DeadlineDate)
+            @Html.DisplayNameFor(model => model.Project)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeadlineDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProjectState)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProjectState!.Description)
+            @Html.DisplayFor(model => model.Project.Description)
         </dd>
     </dl>
-
+    
     <form asp-action="Delete" class="btn-group mt-3" role="group">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-outline-danger" />
