--- a/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
@@ -4,11 +4,10 @@
 	ViewData["Title"] = "Delete Project State";
 }
 
-<h1>Delete</h1>
+<h1 class="text-danger">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Project State?</h3>
 <div>
-	<h4>Project State</h4>
 	<hr />
 	<dl class="row">
 		<dt class = "col-sm-2">
@@ -28,8 +27,8 @@
 	<form asp-action="Delete">
 		<input type="hidden" asp-for="Id"/>
 		<div class="btn-group" role="group">
-			<input type="submit" value="Delete" class="btn btn-danger" />
-			<a asp-action="Index" class="btn btn-secondary">Back to List</a>
+			<input type="submit" value="Delete" class="btn btn-outline-danger" />
+			<a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
 		</div>
 	</form>
 
