--- a/DrawingRegisterWeb/Views/ProjectStates/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Edit.cshtml
@@ -1,16 +1,17 @@
 ﻿@model ProjectState
 
 @{
-    ViewData["Title"] = "Edit Project State";
+    ViewData["Title"] = "Edit Custom Project State";
 }
 
-<h1>Edit</h1>
-
-<h4>Project State</h4>
+<h1 class="text-primary">Edit</h1>
+<h4>Custom Project State</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -23,10 +24,12 @@
                 <textarea asp-for="Description" rows="3" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+
             <div class="btn-group mt-3" role="group">
-                <input type="submit" value="Save" class="btn btn-primary"/>
-                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                <input type="submit" value="Save" class="btn btn-outline-primary"/>
+                <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
             </div>
+
         </form>
     </div>
 </div>
