--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<ProjectState>
 
 @{
-	ViewData["Title"] = "Project State";
+	ViewData["Title"] = "Project States";
 }
 
-<h1>Project State</h1>
+<h1 class="text-primary">Project States</h1>
 
 <div class="alert alert-dismissible alert-warning">
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
@@ -18,23 +18,26 @@
 </div>
 
 <p>
-	<a asp-action="Create" class="btn btn-primary">Create New Custom State</a>
+	<a asp-action="Create" class="btn btn-primary">
+		Create New Custom State
+	</a>
 </p>
 
-<table class="table table-hover">
+<table class="table table-striped">
 	<thead>
 		<tr>
 			<th>
-				@Html.DisplayNameFor(model => model.Name)
+				<a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]">@Html.DisplayNameFor(model => model.Name)</a>
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.Description)
+				<a asp-action="Index" asp-route-sortOrder="@ViewData["DescriptionSortParm"]">@Html.DisplayNameFor(model => model.Description)</a>
 			</th>
 			<th></th>
 		</tr>
 	</thead>
 	<tbody>
-@foreach (var item in Model) {
+	@foreach (var item in Model) 
+	{
 		<tr>
 			<td>
 				@item.Name
@@ -45,32 +48,36 @@
 			<td>
 					@if (item.Name == "Defined" ||
 							item.Name == "Running" ||
-							item.Name == "Suspended" ||
 							item.Name == "Canceled" ||
 							item.Name == "Completed")
 					{
-						<div class="btn-group" role="group">
-						<a 
-							asp-action="Edit" 
-							asp-route-id="@item.Id" 
-							style="pointer-events: none;"
-							class="btn btn-primary disabled">Edit</a>
-						<a 
-							asp-action="Delete" 
-							asp-route-id="@item.Id" 
-							style="pointer-events: none;"
-							class="btn btn-warning disabled">Delete</a>
-						</div>
+						<button 
+							type="button" 
+							class="btn btn-outline-warning" 
+							data-bs-toggle="tooltip" 
+							data-bs-placement="right" 
+							data-bs-original-title="Standard States are disabled for editing and deleting" 
+							aria-describedby="tooltip716761">
+								<i class="bi bi-question-lg"></i>
+						</button>
 					}
 					else
 					{
 						<div class="btn-group" role="group">
-						<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
-						<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-warning">Delete</a>
+						<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
+						<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
 						</div>
 					}
 			</td>
 		</tr>
-}
+	}
 	</tbody>
 </table>
+
+@section Scripts{
+	<script>
+		$(document).ready(function(){
+		  $('[data-bs-toggle="tooltip"]').tooltip();
+		});
+	</script>
+}
