--- a/DrawingRegisterWeb/Views/Drawings/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrawingRegisterWeb.Models.Project
+﻿@model DrawingRegisterWeb.Models.Drawing
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1 class="text-primary">Edit</h1>
 
-<h4>Project</h4>
+<h4>Drawing</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="ProjectNubmer" class="control-label"></label>
-                <input asp-for="ProjectNubmer" class="form-control" />
-                <span asp-validation-for="ProjectNubmer" class="text-danger"></span>
+                <label asp-for="DrawingNumber" class="control-label"></label>
+                <input asp-for="DrawingNumber" class="form-control" />
+                <span asp-validation-for="DrawingNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -34,14 +34,9 @@
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DeadlineDate" class="control-label"></label>
-                <input asp-for="DeadlineDate" class="form-control" />
-                <span asp-validation-for="DeadlineDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProjectStateId" class="control-label"></label>
-                <select asp-for="ProjectStateId" class="form-control" asp-items="ViewBag.ProjectStateId"></select>
-                <span asp-validation-for="ProjectStateId" class="text-danger"></span>
+                <label asp-for="ProjectId" class="control-label"></label>
+                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
             <div class="btn-group mt-3" role="group">
                 <input type="submit" value="Save" class="btn btn-outline-primary" />
