--- a/DrawingRegisterWeb/Views/Drawings/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Index.cshtml
@@ -21,23 +21,28 @@
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 </form>
 
-<table class="table table-striped mt-3">
+<table class="table table-striped mt-3" id="sortTable">
     <thead>
-        <tr>
-            <th>
+        <tr class="user-select-none">
+            <th onclick="sortTable(0)">
                 @Html.DisplayNameFor(model => model.Drawings![0].DrawingNumber)
+                <i class="sortIcon bi"></i>
             </th>
-            <th>
+            <th onclick="sortTable(1)">
                 @Html.DisplayNameFor(model => model.Drawings![0].Name)
+                <i class="sortIcon bi"></i>
             </th>
-            <th>
+            <th onclick="sortTable(2)">
                 @Html.DisplayNameFor(model => model.Drawings![0].Description)
+                <i class="sortIcon bi"></i>
             </th>
-            <th>
+            <th onclick="sortTable(3)">
                 @Html.DisplayNameFor(model => model.Drawings![0].Project)
+                <i class="sortIcon bi"></i>
             </th>
-            <th>
+            <th onclick="sortTable(4)">
                 @Html.DisplayNameFor(model => model.Drawings![0].CreateDate)
+                <i class="sortIcon bi"></i>
             </th>
             <th></th>
         </tr>
@@ -59,7 +64,7 @@
                     @item.Project.ProjectNubmer @item.Project.Name
                 </td>
                 <td>
-                    @item.CreateDate.ToShortDateString()
+                    @item.CreateDate.ToString("yyyy/MM/dd")
                 </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary"> 
