--- a/DrawingRegisterWeb/Views/Documentations/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Documentations/Index.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Documentations";
 }
 
-<h1>Documentation list</h1>
+<h1 class="text-primary">Documentation list</h1>
 
 <div class="alert alert-dismissible alert-info mt-3">
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
@@ -21,23 +21,28 @@
 		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 </form>
 
-<table class="table table-striped mt-3">
+<table class="table table-striped mt-3" id="sortTable">
 	<thead>
-		<tr>
-			<th>
+		<tr class="user-select-none">
+			<th onclick="sortTable(0)">
 				@Html.DisplayNameFor(model => model.Documentations![0].FileName)
+				<i class="sortIcon bi"></i>
 			</th>
-			<th>
+			<th onclick="sortTable(1)">
 				@Html.DisplayNameFor(model => model.Documentations![0].FileType)
+				<i class="sortIcon bi"></i>
 			</th>
-			<th>
+			<th onclick="sortTable(2)">
 				@Html.DisplayNameFor(model => model.Documentations![0].Project)
+				<i class="sortIcon bi"></i>
 			</th>
-			<th>
+			<th onclick="sortTable(3)">
 				@Html.DisplayNameFor(model => model.Documentations![0].CreateDate)
+				<i class="sortIcon bi"></i>
 			</th>
-			<th>
+			<th onclick="sortTable(4)">
 				@Html.DisplayNameFor(model => model.Documentations![0].Revision)
+				<i class="sortIcon bi"></i>
 			</th>
 			<th></th>
 		</tr>
@@ -55,15 +60,50 @@
 				@item.Project.ProjectNubmer @item.Project.Name
 			</td>
 			<td>
-				@item.CreateDate.ToShortDateString()
+				@item.CreateDate.ToString("yyyy/MM/dd")
 			</td>
 			<td>
 				@item.Revision
 			</td>
 			<td>
-				<div class="btn-group" role="group"> 
-					<a class="btn btn-primary">Open <i class="bi bi-cloud-arrow-down-fill"></i></a>
-					<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+				<div class="btn btn-group">							
+					@if (item.FileType == "pdf")
+					{
+						<a	href="@item.FileUrl"
+						target="_blank"
+						class="btn btn-outline-primary"
+						data-bs-toggle="tooltip" 
+						data-bs-placement="bottom" 
+						data-bs-original-title="Open" 
+						aria-describedby="tooltip716761"> 
+							<i class="bi bi-search"></i>
+						</a>
+					}
+					<a	href="@item.FileUrl"
+					class="btn btn-outline-primary"
+					data-bs-toggle="tooltip" 
+					data-bs-placement="bottom" 
+					data-bs-original-title="Download" 
+					aria-describedby="tooltip716761"
+					download="@item.FileName.@item.FileType"> 
+							<i class="bi bi-cloud-download"></i>
+					</a>
+					<a asp-controller="Documentations" asp-action="Edit" asp-route-id="@item.Id"
+					class="btn btn-outline-primary"
+					data-bs-toggle="tooltip" 
+					data-bs-placement="bottom" 
+					data-bs-original-title="Edit" 
+					aria-describedby="tooltip716761"> 
+							<i class="bi bi-pencil-square"></i>
+					</a>
+					<a asp-controller="Documentations" asp-action="Delete" asp-route-id="@item.Id"
+					class="btn btn-outline-danger"
+					data-bs-toggle="tooltip" 
+					data-bs-placement="bottom" 
+					data-bs-original-title="Delete" 
+					aria-describedby="tooltip716761"> 
+						<i class="bi bi-trash"></i>
+					</a>
 				</div>
 			</td>
 		</tr>
