--- a/DrawingRegisterWeb/Views/Layouts/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/Layouts/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrawingRegisterWeb.Models.Documentation
+﻿@model DrawingRegisterWeb.Models.Layout
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,7 +6,7 @@
 
 <h1 class="text-danger">Delete</h1>
 
-<h3>Are you sure you want to delete this Documentation?</h3>
+<h3>Are you sure you want to delete this Layout?</h3>
 <div>
     <hr />
     <dl class="row">
@@ -51,6 +51,6 @@
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-outline-danger" />
         <a asp-controller="Projects" asp-action="Details" asp-route-id="@Model.ProjectId" class="btn btn-outline-secondary">Go to Project</a>
-        <a asp-action="Index" class="btn btn-outline-secondary">Go to Documentation list</a>
+        <a asp-action="Index" class="btn btn-outline-secondary">Go to Layout list</a>
     </form>
 </div>
