--- a/DrawingRegisterWeb/Views/Layouts/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Layouts/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrawingRegisterWeb.Models.Documentation
+﻿@model DrawingRegisterWeb.Models.Layout
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1 class="text-primary">Edit</h1>
 
-<h4>Documentation</h4>
+<h4>Layout</h4>
 <hr />
 <div class="row">
     <div class="col-6">
@@ -58,7 +58,7 @@
             <div class="btn-group mt-3" role="group">
                 <input type="submit" value="Save" class="btn btn-outline-primary" />
                 <a asp-controller="Projects" asp-action="Details" asp-route-id="@Model.ProjectId" class="btn btn-outline-secondary">Go to Project</a>
-                <a asp-action="Index" class="btn btn-outline-secondary">Go to Documentation list</a>
+                <a asp-action="Index" class="btn btn-outline-secondary">Go to Layout list</a>
                 <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-danger">Delete</a>
             </div>
         </form>
